# laye

./: .clang-format  .gitignore  CMakeLists.txt  Contributing.md  FAQ.md  Home.md  Installation.md  LICENCE.md  LICENSE.md  Makefile  Overview.md  README.md  Tutorials.md  _Sidebar.md  ball  compile_flags.txt  exit_code  nob.c  nob.c.2  nob.h  nob.old
.github/workflows/: cmake-multi-platform.yml
ccly/include/: c.h  ccly.h
ccly/lib/: context.c  data.c  debug.c  driver.c  lexer.c  lexer.h  parser.c
ccly/src/: ccly.c  ccly1.c
docs/: Contributing.md  FAQ.md  Home.md  Installation.md  Reference.md  Roadmap.md  Tutorials.md  _Sidebar.md  _Sidebar_.md
docs/Tutorials/: Hello-Hunter.md  HelloHunter.md
examples/: tokens.laye
examples/raylib/: apollonian_gasket.laye  core_basic_window.laye  (+2 more)
fuzz/: parse_fuzzer.c
include/: assert.h  laye.h  layec.h  lcads.h  lcamem.h  lcaplat.h  lcastr.h  nob.h  stdbool.h  stdio.h  stdlib.h  string.h
lib/: CMakeLists.txt  arena.c  context.c  laye_data.c  laye_debug.c  laye_irgen.c  laye_parser.c  laye_sema.c  layec_context.c  layec_depgraph.c  layec_ir.c  layec_llvm.c  layec_shared.c  source.c  string.c  util.c  vector.c
lib/c/: c_parser.c  lexer.c  token.c  translation_unit.c
lib/irpass/: validate.c
lib/laye/: laye.h  laye_data.c  laye_debug.c  laye_irgen.c  laye_parser.c  laye_sema.c  lexer.c  token.c
lib/laye/liblaye/libc/: stdlib.laye  string.laye
lib/laye/liblaye/std/: complex.laye  runtime.laye  string.laye
lib/laye/liblcake/: std.laye
lib/laye/liblcake/libc/: stdlib.laye
lib/laye/raylib/: raylib.laye  raylib_types.laye  rcore.laye  rshapes.laye
lib/liblaye/: std.laye
liblaye/: libc.laye  runtime.laye
src/: driver.c  exec_test_runner.c  laye_data.c  laye_module.c  laye_parser.c  layec.c  layec_context.c  layec_laye.c  layec_module.c  layec_shared.c  main.laye  test_runner.c
test/: block.h  exit.laye  exit_code.laye  exit_code.ll  hello.c  hello.h  hello.laye  pptest.c  return.laye  tokens.laye  var.h
(+144 files in other folders)
